-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.7.0, Lustre 2.8.0
-
3
-
9223372036854775807
When Lustre is configured with CFLAGS="-D_FORTIFY_SOURCE=2 -O2" on Centos 6, the compilation will fails with errors such as this one:
cacheio.c: In function ‘qword_printhex’: cacheio.c:174: error: ignoring return value of ‘fwrite’, declared with attribute warn_unused_result
The value is usually ignored because it doesn't matter.
Note that these errors tend to show on more modern distributions, that have _FORTIFY_SOURCE on by default.
- is related to
-
LU-2753 Tracking bug for static code analysis fixes.
-
- Resolved
-