lustre/tests/llapi_fid_test.c
@@ -92,7 +92,10 @@ static void cleanup(void)
 	rc = snprintf(cmd, sizeof(cmd), "rm -rf -- '%s'", mainpath);
 	ASSERTF(rc > 0 && rc < sizeof(cmd),
 		"invalid delete command for path '%s'", mainpath);
-	system(cmd);
+	rc = system(cmd);
+	ASSERTF(rc != -1, "Cannot execute rm command");
+	ASSERTF(WEXITSTATUS(rc) == 0,
+		"rm command returned %d", WEXITSTATUS(rc));
 }
 
 /* Helper - call path2fid, fd2fid and fid2path against an existing
